# Mind-Lite

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  DECISIONS.md  Dockerfile  FOUNDATION.md  GOM.md  INTEGRATIONS.md  LICENSE  README.md  ROADMAP.md  SECOND_BRAIN.md  docker-compose.yml  pyproject.toml
docs/: MANUAL_TESTING.md  MANUAL_TEST_PASS.md
docs/evals/: v1-scorecard.md
docs/plans/: 2026-02-18-docs-clarity-self-signoff-design.md  2026-02-18-docs-clarity-self-signoff-record.md  2026-02-18-docs-clarity-two-pass-implementation.md  2026-02-18-mind-lite-v1-obsidian-second-brain-implementation.md  2026-02-18-phase-a-contracts-bootstrap-implementation.md  2026-02-18-phase-a-onboarding-analyze-readonly-implementation.md  2026-02-18-phase-b-batch-checkpoint-snapshots-design.md  2026-02-18-phase-b-batch-checkpoint-snapshots-implementation.md  2026-02-18-phase-b-batch-folder-operations-design.md  2026-02-18-phase-b-batch-folder-operations-implementation.md  2026-02-18-phase-b-llm-onboarding-proposals-design.md  2026-02-18-phase-b-llm-onboarding-proposals-implementation.md  2026-02-18-phase-b-publish-export-idempotency-resume-design.md  2026-02-18-phase-b-publish-export-idempotency-resume-implementation.md  2026-02-18-phase-b-staged-onboarding-run-states-design.md  2026-02-18-phase-b-staged-onboarding-run-states-implementation.md  2026-02-18-slice1-runnable-api-bootstrap.md  2026-02-19-phase-c-organization-llm-design.md  2026-02-19-phase-c-organization-llm-implementation.md  (+6 more)
obsidian-plugin/: manifest.json  package.json  styles.css  tsconfig.json
tests/: __init__.py
(+104 files in other folders)
